.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-guga-service
spec:
  selector:
    # Pega o nome do nosso deployment q fica em labels
    app: app-guga
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
